Updated images, about me page revamp, parallax effects added

--- a/about.html
+++ b/about.html
@@ -10,53 +10,76 @@
     <link rel="stylesheet" href="style/footer.css">
 </head>
 <body>
-    <div class="container">
-        <div class="content">
-            <header>
-                <label class="hide-desktop hamburger-menu">
-                    <input type="checkbox">
-                </label> 
-                <aside class="sidebar hide-desktop">
-                    <nav>
-                        <div><a href="index.html">Home</a></div>
-                        <div><a href="about.html">About Me</a></div>
-                        <div><a href="consultations.html">Consultations</a></div>
-                        <div><a href="mediakit.html">Media Kit</a></div>
-                        <div><a href="contact.html">Contact</a></div>
-                    </nav>
-                </aside>
+    <div class="content">
+        <header>
+            <label class="hide-desktop-nav hamburger-menu">
+                <input type="checkbox">
+            </label> 
+            <aside class="sidebar hide-desktop-nav">
                 <nav>
-                    <div class="hide-mobile" id="nav">
-                        <a href="index.html">Home</a>
-                        <a href="about.html">About Me</a>
-                        <div class="dropdown">
-                          <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
-                          <div class="dropdown-content">
-                            <a href="consultVan.html">Vanlife</a>
-                            <a href="consultWeb.html">Website Development</a>
-                          </div>
-                        </div>
-                        <a href="mediakit.html">Media Kit</a>
-                        <a href="contact.html">Contact</a>
-                      </div>
+                    <div><a href="index.html">Home</a></div>
+                    <div><a href="about.html">About Me</a></div>
+                    <div><a href="consultations.html">Consultations</a></div>
+                    <div><a href="mediakit.html">Media Kit</a></div>
+                    <div><a href="contact.html">Contact</a></div>
                 </nav>
-            </header>
-            <div class="section-header">
-                <br>
-                <h1>Hi Im Anjali</h1>
-            </div>
+            </aside>
+            <nav>
+                <div class="hide-mobile-nav" id="nav">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Me</a>
+                    <div class="dropdown">
+                        <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
+                        <div class="dropdown-content">
+                        <a href="consultVan.html">Vanlife</a>
+                        <a href="consultWeb.html">Website Development</a>
+                        </div>
+                    </div>
+                    <a href="mediakit.html">Media Kit</a>
+                    <a href="contact.html">Contact</a>
+                    </div>
+            </nav>
+        </header>
+        
     </div>
 
+    <div class="about-image parallax"><h1 class="section-header hide-desktop">Hi Im Anjali</h1></div>
     <div class="about-container">
-        <p>I'm a US based digital nomad who lives and travels in my self converted Promaster van. I explore the country with my two dogs, Theodore and Remington, and share my stories of solo travel, DIY van building, and tiny living with my pups.
+        <h1 class="section-header hide-mobile">Hi Im Anjali</h1>
+        <p>I live in my self-converted van and travel around North America with my dogs Theo and Remi. I love to explore new places and share my stories of solo travel, DIY van building, and all the other adventures we get up to! Before starting vanlife I graduated from college with a BSE in Computer Science Engineer, then proceeded to work as a software development engineer at Amazon for a few years before leaving the job to pursue content creation and travel. Now I work with amazing brands to market their products on social media!
         </p>
-        <br>
-        <p>My goal is to inspire others to take on unconventional lifestyles no matter how big (or tiny) and live life to the fullest. My community is full of outdoorsy people who are interested in vanlife, solo travel, and working on the road. I am always looking to make connections with new people and find lasting friendships on the road!
-        </p>
-        <br>
-        <br>
-        <img src="/img/about.png" alt="">
     </div>
+    <div class="land-image parallax"></div>
+    <div class="about-container">
+        <h2 class="section-header">Land</h2>
+        <p>I bought my first van in 2020 at the very beginning of the Covid-19 pandemic and built it out on a very small budget. After building Vanny I drove all the way from Michigan to Seattle and lived there for 6 months before moving into the van full time and hitting the road for good. In Septemer 2021 I decided to invest in a newer, bigger Ram Proamster and build it out with a much bigger budget, Vanny 2 was completed in October 2022 and I moved in, drove to Maine, and roadtripped all the way around the US until I got to California. Since then I've been living in my van in the winter and my boat in the summer and traveling all over North America and even Mexico!
+        </p>
+    </div>
+    <div class="sea-image parallax"></div>
+    <div class="about-container">
+        <h2 class="section-header">Sea</h2>
+        <p>In the summer of 2021 I made the decision to add a boat to my list of tiny homes. I purchased a 1972 Uniflite Sport Sedan and made my new home in a slip in Lake Michigan. Boatlife is very similar to vanlife so the transition was easy, I especially loved that I was always near the beach (my dogs' favorite place too) and close enough to my family in Michigan. While my future plans for the boat are unclear, I am constantly working on little projects to update the interior and practice my solo boating skills. I would love to upgrade one day to a sailboat and take if from Lake Michigan out to the Atlantic Ocean and who knows where else! Boaty has really ignited a love for antique restoration and I hope to one day bring it to its full potential as a gorgeous historic boat.
+        </p>
+    </div>
+    <div class="air-image parallax"></div>
+    <div class="about-container">
+        <h2 class="section-header">Air</h3>
+        <p>In my sophomore year of college I learned about general aviation and was very eager to start my path to being a pilot. Over the years I flew here and there and earned my private pilots license in 2020 - my senior year and right before driving away in my van. Flying while travleing is pretty difficult and very expensive so it was put on the back burner for a couple years until this Summer when I drove up to Alaska and completed my Instrument Pilot rating! Alaska openeed my eyes to the wide range of possibilities for professional pilots beyond the airlines. Now my plans include earning my float rating, learning to fly on skis, and going for my commerial licesne when I have the hours. Flying brings me so much joy and I can't wait for the day that I call it my career!
+        </p>
+    </div>
+    <div class="roadless-image parallax"></div>
+    <div class="about-container">
+        <h2 class="section-header">Roadless Journeys LLC</h3>
+            <h3>Content Creation</h3>
+            <p>One of my favorite parts of the nomadic lifestyle that I live is that I have been able to capture and share amazing experiences with my online community. While growing a strong and trusting audience I have had the pleasure of working with some great brands that I love and truly believe in. I am always looking to share products with my audience to make their vanlife journey more smooth and enjoyable. Check out my <a href="mediakit.html">media kit</a> for more info about content creation.
+            <br><br>
+            <h3>Website Consultations</h3>
+            Though I left my job at Amazon and didn't have plans to go back into the tech game, I have re-discovered an enjoyment for the development process and even more than that - I have found a purpose that I am truly passionate about in this area. I love to help small businesses and individuals create their own websites that can be fully custom without paying a subscirption fee. I'm so excited to have found a good use for my experience and I can't wait to help more people set up their website! <a href="consultWeb.html">Learn more about my website consultations here.</a>
+            <br><br>
+            <h3>Vanlife Consultations</h3>
+            Another aspect of my business is vanlife consultations, I absolutley love this part of what I do because I can help people acheive this beautiful life we get on the road. I have personally build 3 vans by myself from budget to luxury and have learned so much about the process that I can share. In addition to building vans, I have lived in different vans/tiny homes for the past 3 years and I know the pain and pleasure points that many experience, I aim to help people who are new to vanlife or just looking for support during their journey. <a href="consultWeb.html">Learn more about my vanlife consultations here.</a>
+            </p>
+    </div>   
 
     <footer class="footer">
         <ul class="footer-social-icon">
