--- a/consultWeb.html
+++ b/consultWeb.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>
-        <label class="hide-desktop hamburger-menu">
+        <label class="hide-desktop-nav hamburger-menu">
             <input type="checkbox">
         </label> 
-        <aside class="sidebar hide-desktop">
+        <aside class="sidebar hide-desktop-nav">
             <nav>
                 <div><a href="index.html">Home</a></div>
                 <div><a href="about.html">About Me</a></div>
@@ -24,7 +24,7 @@
             </nav>
         </aside>
         <nav>
-            <div class="hide-mobile" id="nav">
+            <div class="hide-mobile-nav" id="nav">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <div class="dropdown">
@@ -44,7 +44,7 @@
       <h1>Design. Build. Succeed.</h1>
       <p>Creating the perfect website to achieve your goals.</p>
     </div>
-    <div class="hide-mobile-web">
+    <div class="hide-mobile">
       <div class="web-container">
         <div class="flip-card">
           <div class="flip-card-inner">
@@ -88,34 +88,34 @@
         </div>
       </div>
     </div> 
-    <div class="hide-desktop-web">
+    <div class="hide-desktop">
       <div class="web-container">
         <button type="button" class="collapsible">Start With Confidence</button>
           <div class="collapsible-content">
               Building a website can feel overwhelming. I specialize in helping those with little to no experience in web design get their first website up and running - whether you're starting from scratch or need help enhancing your current site.</p>
-            <button type="button" class="booking-button"><a href="">Book your consultation</a></button>
+            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Subscription-free Solutions</button>
           <div class="collapsible-content">
             I offer guidance on setting up a basic HTML static site, which eliminates the need for monthly subscription fees on sites like Squarespace. This means you can have a professional, functional site that's completley under your control and scalable as your business or personal brand grows.</p>
-            <button type="button" class="booking-button"><a href="">Book your consultation</a></button>
+            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Tailored to Your Needs</button>
           <div class="collapsible-content">
             Whether you need help creating your site's structure, integrating Canva designs, or simply understanding the basics of web design, I'm here to make the process as smooth and stress-free as possible.</p>
-            <button type="button" class="booking-button"><a href="">Book your consultation</a></button>
+            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Build Now, Scale Later</button>
           <div class="collapsible-content">
             I'll show you how to build a solid foundation that you can easily expand on as your audience or services grow. You'll have the flexibility to add new features, content, and pages over time wtihout needing to overhaul the entier site or commit to expensive upgrades.</p>
-            <button type="button" class="booking-button"><a href="">Book your consultation</a></button>
+            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
       </div>
     </div>
     <div class="history-container">
       <div class="history-left">
-        <h1>Hi I'm Anjali</h1>
-        <p>I'm a front-end developer who loves turning ideas into beautifully functional websites. With a degree in Computer Science from the University of Michigan and three years of experience as a front-end software development engineer at Amazon, I bring a wealth of knowledge and hands-on expertise to every project.<span class="hide-desktop-web" id="dots">...</span><span class="hide-desktop-web" id="more">
+        <h1>How can I help?</h1>
+        <p>I'm a front-end developer who loves turning ideas into beautifully functional websites. With a degree in Computer Science from the University of Michigan and three years of experience as a front-end software development engineer at Amazon, I bring a wealth of knowledge and hands-on expertise to every project.<span class="hide-desktop" id="dots">...</span><span class="hide-desktop" id="more">
         <br>
         <br>
         My primary focus is on crafting intuitive, user-friendly websites using HTML and JavaScript. Whether you're looking to build a new static website from scratch or enhance an existing one, I specialize in designing solutions that not only look great but also offer a smooth and effective user experience.
@@ -129,11 +129,11 @@
         <br>
         Feel free to explore my own website—built entirely by me—to see my work in action and to book a consultation. I look forward to the opportunity to collaborate with you!
       </span></p>
-      <button onclick="myFunction()" class="hide-desktop-web" id="readMoreBtn">Read more</button>
+      <button onclick="myFunction()" class="hide-desktop" id="readMoreBtn">Read more</button>
       <button type="button" class="booking-button"><a href="/contact.html">Book your 1:1 call</a></button>
       </div>
       <div class="history-right">
-        <img src="/img/about.jpg" alt="">
+        <img src="/img/Consultations/profilePic.jpg" alt="">
       </div>
     </div>
     <div class="consult-contact">
