--- a/consultations.html
+++ b/consultations.html
@@ -12,20 +12,20 @@
 <body>
     <div class="content">
         <header>
-            <label class="hide-desktop hamburger-menu">
+            <label class="hide-desktop-nav hamburger-menu">
                 <input type="checkbox">
             </label> 
-            <aside class="sidebar hide-desktop">
+            <aside class="sidebar hide-desktop-nav">
                 <nav>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="about.html">About Me</a></div>
-                    <div><a href="blog.html">Blog</a></div>
+                    <div><a href="consultations.html">Consultations</a></div>
                     <div><a href="mediakit.html">Media Kit</a></div>
                     <div><a href="contact.html">Contact</a></div>
                 </nav>
             </aside>
             <nav>
-              <div class="hide-mobile" id="nav">
+              <div class="hide-mobile-nav" id="nav">
                   <a href="index.html">Home</a>
                   <a href="about.html">About Me</a>
                   <div class="dropdown">
@@ -68,9 +68,9 @@
               </div>
             <br>
             <div class="image-container">
-              <img src="/img/vanbuild.jpg" alt="" >
-              <img src="/img/pendleyVan.jpeg" alt="" class="hide-mobile">
-              <img src="/img/moabVan.jpg" alt="" class="hide-mobile">
+              <img src="/img/Consultations/vanbuild.jpg" alt="" >
+              <img src="/img/Consultations/pendleyVan.jpeg" alt="" class="hide-mobile">
+              <img src="/img/Consultations/moabVan.JPG" alt="" class="hide-mobile">
             </div>
         </div>
         
