--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <header>
-        <label class="hide-desktop hamburger-menu">
+        <label class="hide-desktop-nav hamburger-menu">
             <input type="checkbox">
         </label> 
-        <aside class="sidebar hide-desktop">
+        <aside class="sidebar hide-desktop-nav">
             <nav>
                 <div><a href="index.html">Home</a></div>
                 <div><a href="about.html">About Me</a></div>
@@ -24,7 +24,7 @@
             </nav>
         </aside>
         <nav>
-            <div class="hide-mobile" id="nav">
+            <div class="hide-mobile-nav" id="nav">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <div class="dropdown">
@@ -41,17 +41,16 @@
     </header>
 
     <div class="picture-container">
-        <img src="img/mobileHeaderPhoto.jpg" class="hide-desktop" id="mobile-main-img" alt="img">
-        <img src="img/headerPhoto.jpg" class="hide-mobile" id="main-img" alt="img">
+        <h1 class="section-header">Anjali Justice</h1>
+        <p class="section-sub-header">Land • Sea • Air</p>
     </div>
-
     <div class="about-container">
-        <h1 class="section-header">About Me</h1>
+        <!-- <h1 class="section-header hide-mobile">About Me</h1> -->
         <div class="about-section">
             <div class="about-text">
                 <h3>Hi there, I'm Anjali.</h3>
                 <br>
-                <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theodore and Remington and share my stories of solo travel, DIY building, and tiny living.</p>
+                <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theo and Remi and share my stories of solo travel, DIY building, and tiny living.</p>
                 <br>
                 <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support each others dreams, spread love, and are excited to share in this journey we're all on together.</p>
                 <br>
@@ -60,16 +59,17 @@
                 <button class="collab-button"><a href="about.html">More about me</a></button>
             </div>
             <div class="about-img">
-                <img src="img/about.jpg" class="hide-mobile" id="profile-img" alt="img">
+                <img src="img/about.jpeg" class="hide-mobile" id="profile-img" alt="img">
             </div>
         </div>
-    </div>  
+    </div> 
+    <div class="collab-image"></div> 
     <div class="collab-container">
         <h2>Lets work together!</h2>
         <div class="collab-blurb">
-            <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my followers.</p>
+            <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my audience.</p>
             <br>
-            <p>Interested in working together on a project?</p>
+            <p>Interested in working together?</p>
             <br>
             <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
             <br>
