--- a/mediakit.html
+++ b/mediakit.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <header>
-            <label class="hide-desktop hamburger-menu">
+            <label class="hide-desktop-nav hamburger-menu">
                 <input type="checkbox">
             </label> 
-            <aside class="sidebar hide-desktop">
+            <aside class="sidebar hide-desktop-nav">
                 <nav>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="about.html">About Me</a></div>
@@ -25,7 +25,7 @@
                 </nav>
             </aside>
             <nav>
-                <div class="hide-mobile" id="nav">
+                <div class="hide-mobile-nav" id="nav">
                     <a href="index.html">Home</a>
                     <a href="about.html">About Me</a>
                     <div class="dropdown">
