updated photos and some spacing

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
     </header>
 
     <div class="picture-container">
-        <h1 class="section-header">Anjali Justice</h1>
-        <p class="section-sub-header">Land • Sea • Air</p>
+        <div class="picture-container-text">
+            <h1 class="section-header">Anjali Justice</h1>
+            <p class="section-sub-header">Land • Sea • Air</p>
+        </div>
     </div>
     <div class="about-container">
-        <!-- <h1 class="section-header hide-mobile">About Me</h1> -->
         <div class="about-section">
             <div class="about-text">
                 <h3>Hi there, I'm Anjali.</h3>
@@ -59,7 +60,7 @@
                 <button class="collab-button"><a href="about.html">More about me</a></button>
             </div>
             <div class="about-img">
-                <img src="img/about.jpeg" class="hide-mobile" id="profile-img" alt="img">
+                <img src="img/Home/about.jpeg" class="hide-mobile" id="profile-img" alt="img">
             </div>
         </div>
     </div> 
