--- a/about.html
+++ b/about.html
@@ -43,9 +43,8 @@
         
     </div>
 
-    <div class="about-image parallax"><h1 class="section-header hide-desktop">Hi Im Anjali</h1></div>
+    <div class="about-image parallax"><h1 class="section-title">Hi Im Anjali</h1></div>
     <div class="about-container">
-        <h1 class="section-header hide-mobile">Hi Im Anjali</h1>
         <p>I live in my self-converted van and travel around North America with my dogs Theo and Remi. I love to explore new places and share my stories of solo travel, DIY van building, and all the other adventures we get up to! Before starting vanlife I graduated from college with a BSE in Computer Science Engineer, then proceeded to work as a software development engineer at Amazon for a few years before leaving the job to pursue content creation and travel. Now I work with amazing brands to market their products on social media!
         </p>
     </div>
