--- a/about.html
+++ b/about.html
@@ -47,26 +47,31 @@
     <div class="about-container">
         <p>I live in my self-converted van and travel around North America with my dogs Theo and Remi. I love to explore new places and share my stories of solo travel, DIY van building, and all the other adventures we get up to! Before starting vanlife I graduated from college with a BSE in Computer Science Engineer, then proceeded to work as a software development engineer at Amazon for a few years before leaving the job to pursue content creation and travel. Now I work with amazing brands to market their products on social media!
         </p>
+        <hr>
     </div>
-    <div class="land-image parallax"></div>
+    <hr class="divider hide-desktop">
+    <div class="land-image parallax hide-mobile"></div>
     <div class="about-container">
         <h2 class="section-header">Land</h2>
         <p>I bought my first van in 2020 at the very beginning of the Covid-19 pandemic and built it out on a very small budget. After building Vanny I drove all the way from Michigan to Seattle and lived there for 6 months before moving into the van full time and hitting the road for good. In Septemer 2021 I decided to invest in a newer, bigger Ram Proamster and build it out with a much bigger budget, Vanny 2 was completed in October 2022 and I moved in, drove to Maine, and roadtripped all the way around the US until I got to California. Since then I've been living in my van in the winter and my boat in the summer and traveling all over North America and even Mexico!
         </p>
     </div>
-    <div class="sea-image parallax"></div>
+    <hr class="divider hide-desktop">
+    <div class="sea-image parallax hide-mobile"></div>
     <div class="about-container">
         <h2 class="section-header">Sea</h2>
         <p>In the summer of 2021 I made the decision to add a boat to my list of tiny homes. I purchased a 1972 Uniflite Sport Sedan and made my new home in a slip in Lake Michigan. Boatlife is very similar to vanlife so the transition was easy, I especially loved that I was always near the beach (my dogs' favorite place too) and close enough to my family in Michigan. While my future plans for the boat are unclear, I am constantly working on little projects to update the interior and practice my solo boating skills. I would love to upgrade one day to a sailboat and take if from Lake Michigan out to the Atlantic Ocean and who knows where else! Boaty has really ignited a love for antique restoration and I hope to one day bring it to its full potential as a gorgeous historic boat.
         </p>
     </div>
-    <div class="air-image parallax"></div>
+    <hr class="divider hide-desktop">
+    <div class="air-image parallax hide-mobile"></div>
     <div class="about-container">
         <h2 class="section-header">Air</h3>
         <p>In my sophomore year of college I learned about general aviation and was very eager to start my path to being a pilot. Over the years I flew here and there and earned my private pilots license in 2020 - my senior year and right before driving away in my van. Flying while travleing is pretty difficult and very expensive so it was put on the back burner for a couple years until this Summer when I drove up to Alaska and completed my Instrument Pilot rating! Alaska openeed my eyes to the wide range of possibilities for professional pilots beyond the airlines. Now my plans include earning my float rating, learning to fly on skis, and going for my commerial licesne when I have the hours. Flying brings me so much joy and I can't wait for the day that I call it my career!
         </p>
     </div>
-    <div class="roadless-image parallax"></div>
+    <hr class="divider hide-desktop">
+    <div class="roadless-image parallax hide-mobile"></div>
     <div class="about-container">
         <h2 class="section-header">Roadless Journeys LLC</h3>
             <h3>Content Creation</h3>
