--- a/consultVan.html
+++ b/consultVan.html
@@ -42,7 +42,7 @@
     <div class="section-header">
         <br>
         <h1>Vanlife Solutions</h1>
-        <p>Everything you need to know about life on the road</p>
+        <p>Essentials for Living on the Road</p>
     </div>
     <div class="hide-mobile">
       <div class="van-container">
@@ -82,17 +82,17 @@
       <div class="van-container">
         <button type="button" class="collapsible">Personalized solutions</button>
           <div class="collapsible-content">
-              Building a website can feel overwhelming. I specialize in helping those with little to no experience in web design get their first website up and running - whether you're starting from scratch or need help enhancing your current site.</p>
+            <p>There's no one-size-fits-all when it comes to vanlife. Whether you're drawn to minimalism or need more space for work and hobbies, I'll help you customize a van that fits your needs and budget.</p>
             <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Actionable steps</button>
           <div class="collapsible-content">
-            I offer guidance on setting up a basic HTML static site, which eliminates the need for monthly subscription fees on sites like Squarespace. This means you can have a professional, functional site that's completley under your control and scalable as your business or personal brand grows.</p>
+            <p>When you reach out for advice you need real solutions. I provide you with actionble steps for you to take to achieve your dream whether thats building your first van or adding a new feature into your current home. I dont leave you hanging with vague advice.</p>
             <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Experience based advice</button>
           <div class="collapsible-content">
-            Whether you need help creating your site's structure, integrating Canva designs, or simply understanding the basics of web design, I'm here to make the process as smooth and stress-free as possible.</p>
+            <p>With years of experience living on the road and building multiple vans I understand what works, and what doesn't. I'm here to share my experience and give you tips that makes life on the road easier, from power and plumbing to unique pet-friendly solutions.</p>
             <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
       </div>
